--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.0",
     "bootstrap": "^5.2.2",
+    "formik": "^2.2.9",
+    "formik-file-and-image-input": "^0.0.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-frame-component": "^5.2.3",
+    "react-jwt": "^1.1.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
-    "web-vitals": "^2.1.4"
+    "react-to-print": "^2.14.7",
+    "react-toastify": "9.0.3",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
